--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "main": "main.js",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "scripts": {
     "build": "tsc",
-    "dev": "node --watch -r ts-node/register main.ts"
+    "dev": "node --watch -r ts-node/register main.ts",
+    "test": "jest"
+  },
+  "dependencies": {
+    "jest": "^29.7.0"
   }
 }
