--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "rummikub-ma",
+  "private": true,
   "main": "main.js",
   "devDependencies": {
     "@types/jest": "^29.5.12",
@@ -8,13 +10,15 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build": "tsc",
+    "install-all": "npm install; npm install --workspaces",
+    "build": "tsc --build --verbose tsconfig.build.json",
     "dev": "node --watch -r ts-node/register main.ts",
     "test": "jest"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
-    "enquirer": "^2.4.1",
     "jest": "^29.7.0"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
