refactor: change packages names

--- a/packages/application/tsconfig.json
+++ b/packages/application/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "paths": {
-      "@rummikub-ma/*": ["./packages/*"]
+      "@rumi/*": ["./packages/*"]
     },
     "rootDir": "./"
   },
