--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "install-all": "npm install; npm install --workspaces",
+    "install:all": "npm install; npm install --workspaces",
     "build": "tsc --build --verbose tsconfig.build.json",
     "dev": "node --watch -r ts-node/register main.ts",
+    "dev:front": "npm run dev -w @rumi/front",
     "test": "jest"
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0"
   },
   "workspaces": [
