package: do not open vite & storybook on startup

--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -32,7 +32,7 @@
     "build-storybook": "storybook build",
     "dev": "concurrently --names \"FRONT,STORYBOOK\" -c \"bgMagenta.bold,bgGreen.bold\" \"vite\" \"npm run storybook\"",
     "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --no-open",
     "type-check": "vue-tsc --build --force"
   },
   "type": "module"
