--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0"
   },
