--- a/packages/application/package.json
+++ b/packages/application/package.json
@@ -2,5 +2,9 @@
   "name": "@rumi/application",
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "socket.io": "^4.7.5"
   }
 }
