--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -8,6 +8,7 @@
     "@storybook/test": "^8.0.10",
     "@storybook/vue3": "^8.0.10",
     "@storybook/vue3-vite": "^8.0.10",
+    "pinia": "^2.1.7",
     "socket.io-client": "^4.7.5",
     "storybook": "^8.0.10",
     "vue": "^3.4.21",
