--- a/packages/front/tsconfig.app.json
+++ b/packages/front/tsconfig.app.json
@@ -7,7 +7,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
     "baseUrl": ".",
-    "types": ["vite-svg-loader", "vite/client"],
+    "types": ["vite-svg-loader", "vite/client", "jest"],
     "paths": {
       "@/*": ["./src/*"],
       "@rumi/*": ["./packages/*"]
