--- a/packages/front/tsconfig.app.json
+++ b/packages/front/tsconfig.app.json
@@ -6,6 +6,7 @@
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
+    "module": "ES2020",
     "baseUrl": ".",
     "types": ["vite-svg-loader", "vite/client", "jest"],
     "paths": {
