--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "dependency-cruiser": "^16.3.3",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
@@ -17,7 +18,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@heroicons/vue": "^2.1.3",
     "concurrently": "^8.2.2",
     "jest": "^29.7.0"
   },
