--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@heroicons/vue": "^2.1.3",
     "@storybook/addon-a11y": "^8.0.10",
+    "@storybook/addon-actions": "^8.1.6",
     "@storybook/addon-essentials": "^8.0.10",
     "@storybook/addon-interactions": "^8.0.10",
     "@storybook/addon-links": "^8.0.10",
