:bug: Fix storybook & some styles

--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "storybook": "storybook dev -p 6006 --no-open",
-    "storybook:build": "storybook build",
     "deps:check": "npx depcruise app",
     "deps:overview": "npx depcruise app --config ./.dependencyCruise/overview.cjs --output-type archi | dot -T svg | npx depcruise-wrap-stream-in-html > .dependencyCruise/graphs/overview.html",
-    "deps:full": "npx depcruise app --config ./.dependencyCruise/full.cjs --output-type ddot | dot -T svg | npx depcruise-wrap-stream-in-html > .dependencyCruise/graphs/full.html"
+    "deps:full": "npx depcruise app --config ./.dependencyCruise/full.cjs --output-type ddot | dot -T svg | npx depcruise-wrap-stream-in-html > .dependencyCruise/graphs/full.html",
+    "storybook": "storybook dev --port 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/test-utils": "^3.14.2",
+    "@nuxtjs/storybook": "8.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@storybook/addon-essentials": "8.2.7",
+    "@storybook/addon-interactions": "8.2.7",
+    "@storybook/addon-links": "8.2.7",
+    "@storybook/blocks": "8.2.7",
+    "@storybook/builder-vite": "8.2.7",
+    "@storybook/test": "8.2.7",
+    "@storybook/vue3": "8.2.7",
+    "@types/node": "^18.17.5",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.19",
     "dependency-cruiser": "^16.4.2",
-    "nuxt": "^3.12.4",
+    "nuxt": "^3.13.2",
     "postcss": "^8.4.38",
+    "storybook": "8.2.7",
     "tailwindcss": "^3.4.3",
     "vite-svg-loader": "^5.1.0",
     "vitest": "^2.1.1"
@@ -31,23 +41,12 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
     "@heroicons/vue": "^2.1.3",
-    "@storybook/addon-a11y": "^8.0.10",
-    "@storybook/addon-actions": "^8.1.6",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/test": "^8.0.10",
-    "@storybook/vue3": "^8.0.10",
-    "@storybook/vue3-vite": "^8.0.10",
     "@vueuse/components": "^11.0.3",
     "random-words": "^2.0.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
-    "storybook": "^8.0.10",
     "uuid": "^10.0.0",
     "vuedraggable": "^4.1.0",
-    "vuemoji-picker": "^0.2.1",
     "zod": "^3.23.8"
   }
 }
