--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@heroicons/vue": "^2.1.3",
     "@vueuse/components": "^11.0.3",
     "random-words": "^2.0.1",
-    "socket.io": "^4.7.5",
+    "socket.io": "4.7.5",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0",
     "vuedraggable": "^4.1.0",
