--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/test-utils": "^3.14.2",
+    "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/storybook": "8.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
     "@storybook/addon-essentials": "8.2.7",
