--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/icon": "^1.5.2",
     "@nuxt/test-utils": "^3.14.2",
+    "@nuxt/ui": "^2.18.6",
+    "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/storybook": "8.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
