:construction_worker: Ci

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,36 @@
 name: Deploy
 
-on: 
+on:
   push:
     branches:
-        - main
+      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '22.x'
-    - name: Install npm dependencies
-      run: npm install
-    - name: Run build task
-      run: npm run build --if-present
-    - name: Deploy to Server
-      uses: easingthemes/ssh-deploy@main
-      with:
+      - uses: actions/checkout@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "22.x"
+      - name: Install npm dependencies
+        run: npm install
+      - name: Run build task
+        run: npm run build --if-present
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@main
+        with:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-rlgoDzvc -i --delete"
-          SOURCE: "dist/"
+          ARGS: "-rlgoDzvc -i"
+          SOURCE: ${{ secrets.LOCAL_SOURCE }}
+          REMOTE_POST: ${{ secrets.REMOTE_PORT }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
+          SCRIPT_BEFORE: ls
+          SCRIPT_BEFORE_REQUIRED: true
+          SCRIPT_AFTER: ${{ secrets.SCRIPT_AFTER }}
+          SCRIPT_AFTER_REQUIRED: true
           EXCLUDE: "/dist/, /node_modules/"
