:construction_worker: Fix CI REMOTE_POST

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           ARGS: "-rlgoDzvc -i"
           SOURCE: ${{ secrets.LOCAL_SOURCE }}
-          REMOTE_POST: ${{ secrets.REMOTE_PORT }}
+          REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
           REMOTE_USER: ${{ secrets.REMOTE_USER }}
           TARGET: ${{ secrets.REMOTE_TARGET }}
