--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: easingthemes/ssh-deploy@main
         with:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-rlgoDzvc -i"
+          ARGS: "-rlgoDzvc -i --delete"
           SOURCE: ${{ secrets.LOCAL_SOURCE }}
           REMOTE_PORT: ${{ secrets.REMOTE_PORT }}
           REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
