--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Install npm dependencies
         run: npm install
       - name: Run build task
+        run: npm run test:ci
+      - name: Run build task
         run: npm run build --if-present
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
