--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "test:ci": "npx nuxi typecheck && vitest",
+    "test:ci": "npx nuxi typecheck && vitest run",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -40,8 +40,10 @@
     "postcss": "^8.4.38",
     "storybook": "8.2.7",
     "tailwindcss": "^3.4.3",
+    "typescript": "^5.6.2",
     "vite-svg-loader": "^5.1.0",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.1",
+    "vue-tsc": "^2.1.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
