--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "typescript": "^5.6.2",
     "vite-svg-loader": "^5.1.0",
     "vitest": "^2.1.1",
-    "vue-tsc": "^2.1.6"
+    "vue-tsc": "^2.1.6",
+    "h3": "1.12.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "dependencies": {
@@ -51,7 +52,7 @@
     "@vueuse/components": "^11.0.3",
     "random-words": "^2.0.1",
     "socket.io": "4.7.5",
-    "socket.io-client": "^4.7.5",
+    "socket.io-client": "4.7.5",
     "uuid": "^10.0.0",
     "vuedraggable": "^4.1.0",
     "zod": "^3.23.8"
