--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxt/icon": "^1.5.2",
-    "@nuxt/test-utils": "^3.14.2",
+    "@nuxt/test-utils": "^3.14.3",
     "@nuxt/ui": "^2.18.6",
     "@nuxtjs/color-mode": "^3.5.1",
     "@nuxtjs/i18n": "^8.3.1",
     "@nuxtjs/storybook": "8.2.0",
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@playwright/test": "^1.47.2",
     "@storybook/addon-essentials": "8.2.7",
     "@storybook/addon-interactions": "8.2.7",
     "@storybook/addon-links": "8.2.7",
@@ -38,14 +39,16 @@
     "autoprefixer": "^10.4.19",
     "dependency-cruiser": "^16.4.2",
     "h3": "1.12.0",
+    "happy-dom": "^15.7.4",
     "nuxt": "^3.13.2",
+    "playwright-core": "^1.47.2",
     "postcss": "^8.4.38",
     "release-it": "^17.7.0",
     "storybook": "8.2.7",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.6.2",
     "vite-svg-loader": "^5.1.0",
-    "vitest": "^2.1.1",
+    "vitest": "^2.1.2",
     "vue-tsc": "^2.1.6"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
