--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,16 +11,27 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "22.x"
-      - name: Install npm dependencies
-        run: npm install
-      - name: Run build task
-        run: npm run test:ci
-      - name: Run build task
-        run: npm run build --if-present
+
+      - name: Install dependencies
+        run: npm i -g yarn && yarn && npx playwright install --with-deps
+
+      - name: Run smoke tests
+        run: yarn test:smoke
+
+      - name: Run unit tests
+        run: yarn test:unit
+
+      - name: Build task
+        run: yarn build
+
+      - name: Run E2E tests
+        run: yarn test:e2e
+
       - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         with:
