--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "test:ci": "npx nuxi typecheck && vitest run && playwright test",
+    "test:smoke": "npx nuxi typecheck",
+    "test:unit": "vitest run",
+    "test:e2e": "playwright test",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
